syntax = "proto3";


option csharp_namespace = "Timer.Proto.Files";

service FileService{
  rpc GetFiles(Empty) returns (FileIds);
  rpc GetFile(FileId) returns (FileContent);
  rpc CreateFile(FileWithContent) returns (Empty);
  rpc DeleteFile(FileId) returns (Empty);
}

message Empty{
  
}

message FileIds {
  repeated string id = 1;
}

message FileId {
  string id = 1;
}

message FileContent {
  string content = 1;
}

message FileWithContent {
  string id = 1;
  string content = 2;
}


message File { 
  string id = 1;
  string content = 2;
}

